RESOLVED FIXED288743
Rare crash in LayerAncestorClippingStack::updateScrollingNodeLayers()
https://bugs.webkit.org/show_bug.cgi?id=288743
Summary Rare crash in LayerAncestorClippingStack::updateScrollingNodeLayers()
Simon Fraser (smfr)
Reported 2025-02-27 13:22:50 PST
Crash data shows we have a crash here because entry.overflowScrollProxyNodeID is unset.
Attachments
Simon Fraser (smfr)
Comment 1 2025-02-27 13:23:10 PST
Simon Fraser (smfr)
Comment 2 2025-02-27 13:27:38 PST
EWS
Comment 3 2025-02-27 17:07:09 PST
Committed 291279@main (5664e32a23f7): <https://commits.webkit.org/291279@main> Reviewed commits have been landed. Closing PR #41543 and removing active labels.
EWS
Comment 4 2025-03-04 16:50:15 PST
Committed 289651.220@safari-7621-branch (30bd63faed0a): <https://commits.webkit.org/289651.220@safari-7621-branch> Reviewed commits have been landed. Closing PR #2728 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.