Cherry-pick 291279@main (5664e32a23f7). https://bugs.webkit.org/show_bug.cgi?id=288743

Rare crash in LayerAncestorClippingStack::updateScrollingNodeLayers()
    https://bugs.webkit.org/show_bug.cgi?id=288743
    rdar://145408197

    Reviewed by Matt Woodrow.

    Crash data suggests that `entry.overflowScrollProxyNodeID` can be unset here,
    causing the `Markable<>` to release-assertion. So check it before use.

    * Source/WebCore/rendering/LayerAncestorClippingStack.cpp:
    (WebCore::LayerAncestorClippingStack::updateScrollingNodeLayers):

    Canonical link: https://commits.webkit.org/291279@main

Canonical link: https://commits.webkit.org/282416.461@webkitglib/2.46